--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,47 @@
-# Build and Release Folders
-bin/
-bin-debug/
-bin-release/
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.pyc
 
-# Other files and folders
-.settings/
+# TeX stuff #
+###################
+*.dvi
+*.aux
+*.blg
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+.spyderproject
+
+# for individual stuff create your own .gitignore file in your folder..
+
+# list personal run / build / make scripts here; try to use existing names.
+/compile
